--- a/UdbService/Areas/Customer/Views/Cart/Index.cshtml
+++ b/UdbService/Areas/Customer/Views/Cart/Index.cshtml
@@ -16,7 +16,7 @@
                         <i class="fas fa-shopping-cart"></i> &nbsp; Shopping Cart
                     </div>
                     <div class="col-12 col-md-4 offset-md-2 text-right">
-                        <a asp-action="Index" asp-controller="Home" asp-area="Customer" class="btn btn-outline-info form-control btn-sm">Shopping Cart</a>
+                        <a asp-action="Index" asp-controller="Home" asp-area="Customer" class="btn btn-outline-info form-control btn-sm">Back To Home</a>
                     </div>
                 </div>
                 <div class="card-body">
@@ -40,11 +40,11 @@
                                 <div class="col-6 text-md-right" style="padding-top:5px;">
                                     <h6><strong class="text-danger">@(item.Price .ToString("c"))</strong></h6>
                                 </div>
-                                @*<div class="col-6 text-right">
+                                <div class="col-6 text-right">
                                     <button type="submit" class="btn btn-outline-danger" asp-action="remove" asp-route-serviceId="@item.Id">
-                                        <i class="fas fa-trash"></i>
+                                        <i class="fa fa-trash"></i>
                                     </button>
-                                </div>*@
+                                </div>
                             </div>
                         </div>
                         <hr />
@@ -58,7 +58,7 @@
                 </div>
                 <div class="card-footer">
                     <div class="col-12 col-md-6 offset-md-6 col-lg-4 offset-lg-8 text-right">
-                        <a  class="btn btn-primary form-control">Order</a>
+                        <a asp-action="Summary"  class="btn btn-primary form-control">Order</a>
                     </div>
                 </div>
             </div>
