--- a/UdbService/Areas/Identity/Pages/Account/Login.cshtml
+++ b/UdbService/Areas/Identity/Pages/Account/Login.cshtml
@@ -4,78 +4,147 @@
 @{
     ViewData["Title"] = "Log in";
 }
+<style>
+    body {
+        font-family: 'Varela Round', sans-serif;
+    }
 
-<h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4">
-        <section>
-            <form id="account" method="post">
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Input.Email"></label>
-                    <input asp-for="Input.Email" class="form-control" />
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
+    .modal-login {
+        color: #636363;
+        width: 350px;
+        margin: 30px auto;
+    }
+
+        .modal-login .modal-content {
+            padding: 20px;
+            border-radius: 5px;
+            border: none;
+        }
+
+        .modal-login .modal-header {
+            border-bottom: none;
+            position: relative;
+            justify-content: center;
+        }
+
+        .modal-login h4 {
+            text-align: center;
+            font-size: 26px;
+        }
+
+        .modal-login .form-group {
+            position: relative;
+        }
+
+        .modal-login i {
+            position: absolute;
+            left: 13px;
+            top: 11px;
+            font-size: 18px;
+        }
+
+        .modal-login .form-control {
+            padding-left: 40px;
+        }
+
+            .modal-login .form-control:focus {
+                border-color: #00ce81;
+            }
+
+        .modal-login .form-control, .modal-login .btn {
+            min-height: 40px;
+            border-radius: 3px;
+        }
+
+        .modal-login .hint-text {
+            text-align: center;
+            padding-top: 10px;
+        }
+
+        .modal-login .close {
+            position: absolute;
+            top: -5px;
+            right: -5px;
+        }
+
+        .modal-login .btn {
+            background: #00ce81;
+            border: none;
+            line-height: normal;
+        }
+
+            .modal-login .btn:hover, .modal-login .btn:focus {
+                background: #00bf78;
+            }
+
+        .modal-login .modal-footer {
+            background: #ecf0f1;
+            border-color: #dee4e7;
+            text-align: center;
+            margin: 0 -20px -20px;
+            border-radius: 5px;
+            font-size: 13px;
+            justify-content: center;
+        }
+
+            .modal-login .modal-footer a {
+                color: #999;
+            }
+
+    .trigger-btn {
+        display: inline-block;
+        margin: 100px auto;
+    }
+</style>
+
+<br />
+<br />
+<body>
+    <!-- Modal HTML -->
+    <div id="myModal" class="">
+        <div class=" modal-login">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Member Login</h4>
+                    
                 </div>
-                <div class="form-group">
-                    <label asp-for="Input.Password"></label>
-                    <input asp-for="Input.Password" class="form-control" />
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe">
-                            <input asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Log in</button>
-                </div>
-                <div class="form-group">
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                </div>
-            </form>
-        </section>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h4>Use another service to log in.</h4>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
+                <div class="modal-body">
+                    <form action="" method="post">
+                        <div class="form-group">
+                            <i class="fa fa-user"></i>
+                            <input asp-for="Input.Email" placeholder="example@domain.com" class="form-control" />
+                            <span asp-validation-for="Input.Email" class="text-danger"></span>
+
+                        </div>
+                        <div class="form-group">
+                            <i class="fa fa-lock"></i>
+                            <input asp-for="Input.Password" placeholder="Some#$%1234" class="form-control" />
+                            <span asp-validation-for="Input.Password" class="text-danger"></span>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="checkbox">
+                                <label asp-for="Input.RememberMe">
+                                    <input asp-for="Input.RememberMe" />
+                                    @Html.DisplayNameFor(m => m.Input.RememberMe)
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary">Log in</button>
                         </div>
                     </form>
-                }
-            }
-        </section>
+
+                </div>
+                <div class="modal-footer">
+                    <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>||
+                    <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+</body>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
