--- a/UdbService/Areas/Admin/Views/Category/Index.cshtml
+++ b/UdbService/Areas/Admin/Views/Category/Index.cshtml
@@ -25,9 +25,10 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+
+                <a asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-edit"></i></a>&nbsp;
+                <a asp-action="Details" asp-route-id="@item.Id"><i class="fas fa-info"></i></a> &nbsp;
+                <a asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-trash"></i></a>&nbsp;
             </td>
         </tr>
 }
