--- a/UdbService/Areas/Customer/Views/Cart/Index.cshtml
+++ b/UdbService/Areas/Customer/Views/Cart/Index.cshtml
@@ -2,9 +2,11 @@
 
 
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_CustomerLayout.cshtml";
 }
-
+<br />
+<br />
+<br />
 <form method="post">
     @if (Model.ServiceList.Count > 0)
     {
@@ -42,7 +44,7 @@
                                 </div>
                                 <div class="col-6 text-right">
                                     <button type="submit" class="btn btn-outline-danger" asp-action="remove" asp-route-serviceId="@item.Id">
-                                        <i class="fa fa-trash"></i>
+                                        <i class="fas fa-trash"></i>
                                     </button>
                                 </div>
                             </div>
@@ -58,7 +60,7 @@
                 </div>
                 <div class="card-footer">
                     <div class="col-12 col-md-6 offset-md-6 col-lg-4 offset-lg-8 text-right">
-                        <a asp-action="Summary"  class="btn btn-primary form-control">Order</a>
+                        <a asp-action="Summary"  class="btn btn-primary">Order</a>
                     </div>
                 </div>
             </div>
