--- a/UdbService/Areas/Identity/Pages/Account/Register.cshtml
+++ b/UdbService/Areas/Identity/Pages/Account/Register.cshtml
@@ -129,7 +129,7 @@
                             <span class="fa fa-user"></span>
                         </span>
                     </div>
-                    <input asp-for="Input.Name" type="text" class="form-control" name="username" placeholder="Username" required="required">
+                    <input asp-for="Input.Name" class="form-control" placeholder="Name">
                     <span asp-validation-for="Input.Name" class="text-danger"></span>
                 </div>
             </div>
@@ -140,7 +140,7 @@
                             <i class="fa fa-paper-plane"></i>
                         </span>
                     </div>
-                    <input asp-for="Input.Email" type="email" class="form-control" name="email" placeholder="Email Address" required="required">
+                    <input asp-for="Input.Email"  class="form-control" placeholder="Email Address">
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
             </div>
@@ -151,7 +151,7 @@
                             <i class="fas fa-city"></i>
                         </span>
                     </div>
-                    <input asp-for="Input.City" type="text" class="form-control" name="City" placeholder="City">
+                    <input asp-for="Input.City"  class="form-control" placeholder="City">
                     <span asp-validation-for="Input.City" class="text-danger"></span>
                 </div>
             </div>
@@ -162,7 +162,7 @@
                             <i class="fas fa-address-card"></i>
                         </span>
                     </div>
-                    <input asp-for="Input.Address" type="text" class="form-control" name="Address" placeholder="Address">
+                    <input asp-for="Input.Address" class="form-control" placeholder="Address">
                     <span asp-validation-for="Input.Address" class="text-danger"></span>
                 </div>
             </div>
@@ -174,7 +174,7 @@
                             <i class="fal fa-phone-square-alt"></i>
                         </span>
                     </div>
-                    <input asp-for="Input.PhoneNumber" type="tel" class="form-control" name="PhoneNumber" placeholder="PhoneNumber" required="required">
+                    <input asp-for="Input.PhoneNumber"  class="form-control"  placeholder="PhoneNumber">
                     <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
                 </div>
             </div>
@@ -185,7 +185,7 @@
                             <i class="fa fa-lock"></i>
                         </span>
                     </div>
-                    <input asp-for="Input.Password" type="text" class="form-control" name="password" placeholder="Password" required="required">
+                    <input asp-for="Input.Password" class="form-control" placeholder="Password">
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
             </div>
@@ -197,13 +197,11 @@
                             <i class="fa fa-check"></i>
                         </span>
                     </div>
-                    <input asp-for="Input.ConfirmPassword" type="text" class="form-control" name="confirm_password" placeholder="Confirm Password" required="required">
+                    <input asp-for="Input.ConfirmPassword" class="form-control" placeholder="Confirm Password">
                     <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                 </div>
             </div>
-            <div class="form-group">
-                <label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
-            </div>
+            
             <div class="form-group">
                 <button type="submit" class="btn btn-primary btn-lg">Sign Up</button>
             </div>
