--- a/UdbService/Areas/Admin/Views/Order/Details.cshtml
+++ b/UdbService/Areas/Admin/Views/Order/Details.cshtml
@@ -18,7 +18,7 @@
                         <i class="fas fa-shopping-cart"></i> &nbsp; Order Summary
                     </div>
                     <div class="col-12 col-md-4 offset-md-2 text-right">
-                        <a asp-action="Index" asp-controller="Order" asp-area="Index" class="btn btn-outline-info form-control btn-sm">Back to Orders</a>
+                        <a asp-action="Index" class="btn btn-outline-info form-control btn-sm">Back to Orders</a>
                     </div>
                 </div>
                 <div class="card-body">
@@ -119,7 +119,7 @@
                                 <a asp-action="Approve" asp-route-id="@Model.Order.Id" class="btn btn-success form-control">Approve</a>
                             </div>
                             <div class="col-6 col-md-4 col-lg-2">
-                                <a asp-action="reject" asp-route-id="@Model.Order.Id" class="btn btn-danger form-control">Reject</a>
+                                <a asp-action="Reject" asp-route-id="@Model.Order.Id" class="btn btn-danger form-control">Reject</a>
                             </div>
                         }
                     </div>
