--- a/UdbService/Areas/Customer/Views/Home/Index.cshtml
+++ b/UdbService/Areas/Customer/Views/Home/Index.cshtml
@@ -3,255 +3,201 @@
 <br />
 <br />
 
-<div id="carousel-example-1z" class="carousel slide carousel-fade pt-4" data-ride="carousel">
-
-    <!--Indicators-->
-    <ol class="carousel-indicators">
-        <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-1z" data-slide-to="1"></li>
-        <li data-target="#carousel-example-1z" data-slide-to="2"></li>
-    </ol>
-    <!--/.Indicators-->
-    <!--Slides-->
-    <div class="carousel-inner" role="listbox">
-
-        <!--First slide-->
-        <div class="carousel-item active">
-            <div class="view" style="background-image: url('https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/8-col/img%282%29.jpg'); background-repeat: no-repeat; background-size: cover;">
-
-                <!-- Mask & flexbox options-->
-                <div class="mask rgba-black-strong d-flex justify-content-center align-items-center">
-
-                    <!-- Content -->
+<body>
+    <!--Carousel Wrapper-->
+    <!--Carousel Wrapper-->
+    <div id="carousel-example-2" class="carousel slide carousel-fade" data-ride="carousel">
+        <!--Indicators-->
+        <ol class="carousel-indicators">
+            <li data-target="#carousel-example-2" data-slide-to="0" class="active"></li>
+            @*<li data-target="#carousel-example-2" data-slide-to="1"></li>
+            <li data-target="#carousel-example-2" data-slide-to="2"></li>*@
+        </ol>
+        <!--/.Indicators-->
+        <!--Slides-->
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+                <div class="view">
+                    <img class="d-block w-100" src="~/Images/ConstantImage/unnamed.jpg"
+                         alt="First slide">
+                    <div class="mask rgba-black-light"></div>
+                </div>
+                <div class="carousel-caption">
                     <div class="text-center white-text mx-5 wow fadeIn">
                         <h1 class="mb-4">
                             <strong>UDB SERVICES</strong>
                         </h1>
 
                         <p>
-                            <strong>Service Near at You</strong>
+                            <strong>Feel Free To Take Our Services</strong>
                         </p>
 
                         <p class="mb-4 d-none d-md-block">
                             <strong>
-                                Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.
+                                The most comprehensive tutorial for the Bootstrap 4. Loved by over 500 000 users. Video and
+                                written versions
+                                available. Create your own, stunning website.
                             </strong>
                         </p>
 
-                        <a target="_blank" href="#" class="btn btn-outline-white btn-lg">
-                            About Us
+                        <a target="_blank" href="https://mdbootstrap.com/education/bootstrap/" class="btn btn-outline-white btn-lg">
+                            Start
+                            free tutorial
                             <i class="fas fa-graduation-cap ml-2"></i>
                         </a>
                     </div>
-                    <!-- Content -->
-
                 </div>
-                <!-- Mask & flexbox options-->
-
             </div>
-        </div>
-        <!--/First slide-->
-        <!--Second slide-->
-        <div class="carousel-item">
-            <div class="view" style="background-image: url('https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/8-col/img%283%29.jpg'); background-repeat: no-repeat; background-size: cover;">
-
-                <!-- Mask & flexbox options-->
-                <div class="mask rgba-black-strong d-flex justify-content-center align-items-center">
-
-                    <!-- Content -->
-                    <div class="text-center white-text mx-5 wow fadeIn">
-                        <h1 class="mb-4">
-                            <strong>UDB SERVICES</strong>
-                        </h1>
-
-                        <p>
-                            <strong>Something special about us</strong>
-                        </p>
-
-                        <p class="mb-4 d-none d-md-block">
-                            <strong>
-                                few quotes
-                            </strong>
-                        </p>
-
-                        <a target="_blank" href="#" class="btn btn-outline-white btn-lg">
-                            About Us
-                            <i class="fas fa-graduation-cap ml-2"></i>
-                        </a>
-                    </div>
-                    <!-- Content -->
-
+            <!--<div class="carousel-item">-->
+                <!--Mask color-->
+                <!--<div class="view">
+                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg"
+                         alt="Second slide">
+                    <div class="mask rgba-black-strong"></div>
                 </div>
-                <!-- Mask & flexbox options-->
-
-            </div>
-        </div>
-        <!--/Second slide-->
-        <!--Third slide-->
-        <div class="carousel-item">
-            <div class="view" style="background-image: url('https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/8-col/img%285%29.jpg'); background-repeat: no-repeat; background-size: cover;">
-
-                <!-- Mask & flexbox options-->
-                <div class="mask rgba-black-strong d-flex justify-content-center align-items-center">
-
-                    <!-- Content -->
-                    <div class="text-center white-text mx-5 wow fadeIn">
-                        <h1 class="mb-4">
-                            <strong>Full Meaning</strong>
-                        </h1>
-
-                        <p>
-                            <strong>Some Strong Text</strong>
-                        </p>
-
-                        <p class="mb-4 d-none d-md-block">
-                            <strong>
-                                Few Quots here
-                            </strong>
-                        </p>
-
-                        <a target="_blank" href="#" class="btn btn-outline-white btn-lg">
-                            About Us
-                            <i class="fas fa-graduation-cap ml-2"></i>
-                        </a>
-                    </div>
-                    <!-- Content -->
-
+                <div class="carousel-caption">
+                    <h3 class="h3-responsive">Strong mask</h3>
+                    <p>Secondary text</p>
                 </div>
-                <!-- Mask & flexbox options-->
-
             </div>
+            <div class="carousel-item">-->
+                <!--Mask color-->
+                <!--<div class="view">
+                    <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg"
+                         alt="Third slide">
+                    <div class="mask rgba-black-slight"></div>
+                </div>
+                <div class="carousel-caption">
+                    <h3 class="h3-responsive">Slight mask</h3>
+                    <p>Third text</p>
+                </div>
+            </div>-->
         </div>
-        <!--/Third slide-->
-
+        <!--/.Slides-->
+        <!--Controls-->
+        <a class="carousel-control-prev" href="#carousel-example-2" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carousel-example-2" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+        <!--/.Controls-->
     </div>
-    <!--/.Slides-->
-    <!--Controls-->
-    <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-    <!--/.Controls-->
+    <!--/.Carousel Wrapper-->
+    <!--/.Carousel Wrapper-->
+    <!--Navbar-->
+    <main>
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-dark mdb-color lighten-3 mt-3 mb-5">
 
-</div>
-<!--/.Carousel Wrapper-->
-<!--Navbar-->
-<main>
-    <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-dark mdb-color lighten-3 mt-3 mb-5">
+                <!-- Navbar brand -->
+                <span class="navbar-brand">Categories:</span>
 
-            <!-- Navbar brand -->
-            <span class="navbar-brand">Categories:</span>
+                <!-- Collapse button -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
+                        aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <!-- Collapse button -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
-                    aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                <!-- Collapsible content -->
+                <div class="collapse navbar-collapse" id="basicExampleNav">
 
-            <!-- Collapsible content -->
-            <div class="collapse navbar-collapse" id="basicExampleNav">
-
-                <!-- Links -->
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" asp-action="Index" asp-route-id="0">
-                            All
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-
-
-                @foreach (var category in Model.CategoryList)
-                    {
-
-                        <li class="nav-item">
-                            <a class="nav-link" asp-action="Index" asp-route-id="@category.Id">@category.Name</a>
+                    <!-- Links -->
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" asp-action="Index" asp-route-id="0">
+                                All
+                                <span class="sr-only">(current)</span>
+                            </a>
                         </li>
-                        
-                        
-                     }
-                 </ul>
-                                <!-- Links -->
-
-                         <form class="form-inline">
-                             <div class="md-form my-0">
-                                 <input class="form-control mr-sm-2" placeholder="Search a service" type="text" asp-for="SearchString" />
-                                 <input class="hoverable btn-outline-blue form-control mr-sm-2" type="submit" value="Search" />
-                             </div>
-                              
-                         </form>
-             </div>
-
-                        </nav> <!--/.Navbar-->
-        <!--Main layout-->
 
 
+                        @foreach (var category in Model.CategoryList)
+                        {
 
+            <li class="nav-item">
+                <a class="nav-link" asp-action="Index" asp-route-id="@category.Id">@category.Name</a>
+            </li>
+}
+                    </ul>
+                    <!-- Links -->
 
-        <section class="text-center mb-4">
-            <div class="row wow fadeIn">
-
-                @foreach (var item in Model.ServiceList)
-                {
-
-
-                    <div class="col-lg-3 col-md-6 shadow-sm mb-5">
-
-                        <!--Card-->
-
-                        <div class="card">
-
-                            <!--Card image-->
-                            <div class="view overlay">
-                                <img src="~/Images/services/@item.ImageName" asp-append-version="true" class="card-img-top " height="250" width="250"
-                                     alt="">
-                                <a>
-                                    <div class="mask rgba-white-slight"></div>
-                                </a>
-                            </div>
-                            <!--Card image-->
-                            <!--Card content-->
-                            <div class="card-body text-center">
-                                <!--Category & Title-->
-                                <a href="" class="grey-text">
-                                    <h5>@Html.DisplayFor(modelItem => item.Category.Name)</h5>
-                                </a>
-
-                                <h5>
-                                    <strong>
-                                        <a href="" class="dark-grey-text">
-                                            @Html.DisplayFor(modelItem => item.Name)
-                                            @*<span class="badge badge-pill danger-color">NEW</span>*@
-                                        </a>
-                                    </strong>
-                                </h5>
-
-                                <h4 class="badge badge-pill danger-color ">
-                                    <del> @((int)item.Price + (int)item.Price * 0.4) $ </del>
-                                </h4>
-                
-                                <h4 class="font-weight-bold blue-text">
-                                    <strong>@Html.DisplayFor(modelItem => item.Price) $</strong>
-                                </h4>
-
-                                <a asp-action="Details" class="btn btn-primary" style="border-radius:2px;" asp-route-id="@item.Id">Details</a>
-
-                            </div>
-                            <!--Card content-->
-
+                    <form class="form-inline">
+                        <div class="md-form my-0">
+                            <input class="form-control mr-sm-2" placeholder="Search a service" type="text" asp-for="SearchString" />
+                            <input class="hoverable btn-outline-blue form-control mr-sm-2" type="submit" value="Search" />
                         </div>
 
-                    </div>
-    }
+                    </form>
+                </div>
+
+            </nav> <!--/.Navbar-->
+            <!--Main layout-->
+
+
+
+
+            <section class="text-center mb-4">
+                <div class="row wow fadeIn">
+
+                    @foreach (var item in Model.ServiceList)
+                    {
+
+
+        <div class="col-lg-3 col-md-6 shadow-sm mb-5">
+
+            <!--Card-->
+
+            <div class="card">
+
+                <!--Card image-->
+                <div class="view overlay">
+                    <img src="~/Images/services/@item.ImageName" asp-append-version="true" class="card-img-top " height="250" width="250"
+                         alt="">
+                    <a>
+                        <div class="mask rgba-white-slight"></div>
+                    </a>
+                </div>
+                <!--Card image-->
+                <!--Card content-->
+                <div class="card-body text-center">
+                    <!--Category & Title-->
+                    <a href="" class="grey-text">
+                        <h5>@Html.DisplayFor(modelItem => item.Category.Name)</h5>
+                    </a>
+
+                    <h5>
+                        <strong>
+                            <a href="" class="dark-grey-text">
+                                @Html.DisplayFor(modelItem => item.Name)
+                                @*<span class="badge badge-pill danger-color">NEW</span>*@
+                            </a>
+                        </strong>
+                    </h5>
+
+                    <h4 class="badge badge-pill danger-color ">
+                        <del> @((int)item.Price + (int)item.Price * 0.4) $ </del>
+                    </h4>
+
+                    <h4 class="font-weight-bold blue-text">
+                        <strong>@Html.DisplayFor(modelItem => item.Price) $</strong>
+                    </h4>
+
+                    <a asp-action="Details" class="btn btn-primary" style="border-radius:2px;" asp-route-id="@item.Id">Details</a>
+
+                </div>
+                <!--Card content-->
+
             </div>
-        </section>
+
+        </div>}
+                </div>
+            </section>
 
 
-    </div>
-</main>
-<!--Main layout-->
+        </div>
+    </main>
+    <!--Main layout-->
+</body>
