--- a/UdbService/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/UdbService/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -3,8 +3,12 @@
 @{
     ViewData["Title"] = "Access denied";
 }
-
-<header>
-    <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
-</header>
+<br />
+<br />
+<br />
+<div class="container">
+    <header>
+        <h1 class="text-danger">@ViewData["Title"]</h1>
+        <p class="text-danger">You do not have access to this resource.</p>
+    </header>
+</div>
