--- a/UdbService/Areas/Identity/Pages/Account/Lockout.cshtml
+++ b/UdbService/Areas/Identity/Pages/Account/Lockout.cshtml
@@ -3,8 +3,12 @@
 @{
     ViewData["Title"] = "Locked out";
 }
-
-<header>
-    <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">This account has been locked out, please try again later.</p>
-</header>
+<br />
+<br />
+<br />
+<div class="container">
+    <header>
+        <h1 class="text-danger">@ViewData["Title"]</h1>
+        <p class="text-danger">This account has been locked out, please try again later.</p>
+    </header>
+</div>
