--- a/UdbService/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/UdbService/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -5,7 +5,11 @@
 }
 
 <h1>@ViewData["Title"]</h1>
-<p>
-    Please check your email to reset your password.
-</p>
-
+<br />
+<br />
+<br />
+<div class="container">
+    <p>
+        Please check your email to reset your password.
+    </p>
+</div>
