--- a/UdbService/Areas/Identity/Pages/Account/Login.cshtml
+++ b/UdbService/Areas/Identity/Pages/Account/Login.cshtml
@@ -110,6 +110,7 @@
                 </div>
                 <div class="modal-body">
                     <form action="" method="post">
+
                         <div class="form-group">
                             <i class="fa fa-user"></i>
                             <input asp-for="Input.Email" placeholder="example@domain.com" class="form-control" />
@@ -130,6 +131,7 @@
                                 </label>
                             </div>
                         </div>
+                        <span class="text-danger">@ViewData["NotMached"]</span>
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary">Log in</button>
                         </div>
