--- a/UdbService/Views/Shared/_AdminLayout.cshtml
+++ b/UdbService/Views/Shared/_AdminLayout.cshtml
@@ -74,16 +74,19 @@
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
-                           with font-awesome or any other icon font library -->
+       with font-awesome or any other icon font library -->
                         <!--Sidebar First Menu -->
+                        <a class="nav-item" asp-area="Admin" asp-controller="Chart" asp-action="Index"> <i class="nav-icon fas fa-tachometer-alt"></i>Dashboard</a>
+                        <br />
+                        <br />
+                        <li class="nav-item menu-is-opening">
 
-                        <li class="nav-item menu-open">
 
                             <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-tachometer-alt"></i>
+                                <i class="nav-icon fas fa-ellipsis-v"></i>
                                 <p>
-                                    Menu 
-                                    <i class="right fas fa-angle-right"></i>
+                                    Menu
+                                    <i class="right fas fa-angle-double-left"></i>
                                 </p>
                             </a>
 
