--- a/UdbService/Areas/Customer/Views/CustomerOrderManagement/Index.cshtml
+++ b/UdbService/Areas/Customer/Views/CustomerOrderManagement/Index.cshtml
@@ -59,7 +59,7 @@
                                   {
 
                                       <div class="col-6 col-md-4 col-lg-2">
-                                          <a asp-action="Reject" asp-route-id="@item.Id" class="btn btn-danger">Reject</a>
+                                          <a asp-action="Reject" asp-route-id="@item.Id" class="btn btn-danger">Cancel</a>
                                       </div>
                                   }
                                   else
@@ -76,7 +76,7 @@
               }
               else
               {
-                <p>Welcome Sir!!! You have not yet placed an order. Please place your first order.</p>
+                <tr>Welcome Sir!!! You have not yet placed an order. Please place your first order.</tr>
               }
           </table>
 
